tests/baselines/reference/typeofAmbientExternalModules.errors.txt
typeofAmbientExternalModules_2.ts(7,1): error TS2741: Property 'C' is missing in type 'typeof D' but required in type 'typeof import("typeofAmbientExternalModules_0")'.
typeofAmbientExternalModules_2.ts(9,1): error TS2741: Property 'prototype' is missing in type 'typeof import("typeofAmbientExternalModules_0")' but required in type 'typeof D'.


==== typeofAmbientExternalModules_2.ts (2 errors) ====
    ///<reference path='typeofAmbientExternalModules_0.ts'/>
    ///<reference path='typeofAmbientExternalModules_1.ts'/>
    import ext = require('./typeofAmbientExternalModules_0');
    import exp = require('./typeofAmbientExternalModules_1');
    
    var y1: typeof ext = ext;
    y1 = exp;
    ~~
!!! error TS2741: Property 'C' is missing in type 'typeof D' but required in type 'typeof import("typeofAmbientExternalModules_0")'.
!!! related TS2728 typeofAmbientExternalModules_0.ts:1:14: 'C' is declared here.
    var y2: typeof exp = exp;
    y2 = ext;
    ~~
!!! error TS2741: Property 'prototype' is missing in type 'typeof import("typeofAmbientExternalModules_0")' but required in type 'typeof D'.
==== typeofAmbientExternalModules_0.ts (0 errors) ====
    export class C { foo: string; }
    
==== typeofAmbientExternalModules_1.ts (0 errors) ====
    class D { bar: string; }
    export = D;
    